# logic-game

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
logic-game-wasm/: Cargo.toml
logic-game-wasm/src/: lang.rs  lib.rs  parser.rs
src/: App.tsx  Conclusion.tsx  Game.tsx  GoalTab.tsx  GoalTabs.tsx  Home.tsx  Latex.tsx  LockedTacticButton.tsx  Logic.tsx  LogicProps.tsx  Premises.tsx  TacticButton.tsx  TacticButtons.tsx  UndoRedoButton.tsx  index.tsx
wasm/: Cargo.toml
wasm/src/: lang.rs  latex.rs  lib.rs  parser.rs  tactic.rs
