[package]
name = "logic-game-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
peg = "0.8.3"
test-case = "3.3.1"
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
itertools = "0.13.0"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
