[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
peg = "0.8.3"
test-case = "3.3.1"
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
tsify = "0.4.5"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
