[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
peg = "0.8.3"
thiserror = "1.0.62"
wasm-bindgen = "0.2.92"
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
tsify = "0.4.5"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.1"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
